Adds validation for user updating
Created tests for user creation and creation validation
Included Lombok to tests to reduce clutter